<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="60dp"
    android:padding="6dip"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_marginEnd="6dip"
        android:contentDescription="TODO"
        android:src="@drawable/group_black" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">

        <TextView
            android:id="@+id/firstLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="Example application"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/secondLine"
            android:layout_width="wrap_content"
            android:layout_height="26dip"
            android:ellipsize="marquee"
            android:singleLine="true"
            android:text="Description"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">

        <TextView
            android:id="@+id/firstLine2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="Example application"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/secondLine2"
            android:layout_width="wrap_content"
            android:layout_height="26dip"
            android:ellipsize="marquee"
            android:singleLine="true"
            android:text="Description"
            android:textSize="12sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/view"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:background="@null"
            android:contentDescription="@string/view"
            android:paddingEnd="5dp"
            android:paddingStart="5dp"
            android:src="@drawable/emoticon_black" />

        <ImageButton
            android:id="@+id/edit"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:background="@null"
            android:contentDescription="@string/edit"
            android:paddingEnd="5dp"
            android:paddingStart="5dp"
            android:src="@drawable/edit_black" />

        <ImageButton
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:background="@null"
            android:contentDescription="@string/delete"
            android:paddingEnd="5dp"
            android:paddingStart="5dp"
            android:src="@drawable/delete_black" />
    </LinearLayout>
</LinearLayout>
