<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.MainActivity">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingEnd="10dp"
                        android:paddingStart="10dp">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center_vertical"
                            android:scaleType="fitXY"
                            android:layout_marginTop="5dp"
                            android:src="@drawable/graph_1" />

                        <RadioGroup
                            android:id="@+id/scaleRadioGroup"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <RadioButton
                                android:id="@+id/scale30"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:checked="true"
                                android:text="@string/scale30" />

                            <RadioButton
                                android:id="@+id/scale60"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/scale60" />

                            <RadioButton
                                android:id="@+id/scale90"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/scale90" />
                        </RadioGroup>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingEnd="10dp"
                        android:paddingStart="10dp">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center"
                            android:scaleType="fitXY"
                            android:src="@drawable/graph_1"
                            android:layout_marginTop="5dp"/>

                        <RadioGroup
                            android:id="@+id/graphRadioGroup"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <RadioButton
                                android:id="@+id/graphMain"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:checked="true"
                                android:text="@string/graphsMain" />

                            <RadioButton
                                android:id="@+id/graphAux"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/graphsAux" />
                        </RadioGroup>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/mainDatePicker"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/pickMainDate" />

                    <Button
                        android:id="@+id/auxDatePicker"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/pickAuxDate"
                        android:visibility="gone"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="70">

                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/chart"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:minHeight="50dp" />

            </LinearLayout>

            <!--<LinearLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:orientation="horizontal">-->

                <!--<LinearLayout-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:orientation="vertical">-->

                    <!--<TextView-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:layout_marginBottom="5dp"-->
                        <!--android:minWidth="100dp"-->
                        <!--android:text="@string/physical"-->
                        <!--android:textColor="@color/graph24"-->
                        <!--android:visibility="invisible" />-->

                    <!--<TextView-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:layout_marginBottom="5dp"-->
                        <!--android:minWidth="100dp"-->
                        <!--android:text="@string/physical"-->
                        <!--android:textColor="@color/graph24" />-->

                    <!--<TextView-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:layout_marginBottom="5dp"-->
                        <!--android:text="@string/emotional"-->
                        <!--android:textColor="@color/graph28" />-->

                    <!--<TextView-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:layout_marginBottom="5dp"-->
                        <!--android:text="@string/intellect"-->
                        <!--android:textColor="@color/graph33" />-->

                    <!--<TextView-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:text="@string/intuition"-->
                        <!--android:textColor="@color/graph40" />-->
                <!--</LinearLayout>-->

                <!--<LinearLayout-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="match_parent"-->
                    <!--android:orientation="horizontal">-->

                    <!--<HorizontalScrollView-->
                        <!--android:layout_width="match_parent"-->
                        <!--android:layout_height="match_parent"-->
                        <!--android:scrollbars="none">-->

                        <!--<LinearLayout-->
                            <!--android:layout_width="wrap_content"-->
                            <!--android:layout_height="wrap_content"-->
                            <!--android:orientation="horizontal">-->

                            <!--<GridView-->
                                <!--android:id="@+id/graph_state_grid"-->
                                <!--android:layout_width="match_parent"-->
                                <!--android:layout_height="wrap_content"-->
                                <!--android:layout_gravity="center"-->
                                <!--android:scrollbars="none" />-->
                        <!--</LinearLayout>-->
                    <!--</HorizontalScrollView>-->
                <!--</LinearLayout>-->
            <!--</LinearLayout>-->
        </LinearLayout>
    </ScrollView>
</LinearLayout>